@@ -22,7 +22,7 @@
 #include <config.h>
 #endif
 
-#include <hurd/mutex.h>
+#include "mutex.h"
 
 #ifndef NDEBUG
 struct ss_lock_trace ss_lock_trace[SS_LOCK_TRACE_COUNT];
