@@ -1,3 +1,12 @@
+2008-01-22  Neal H. Walfield  <neal@gnu.org>
+
+	* mutex.h: New file, copy ../hurd/mutex.h.
+
+	* ager.c: Include "mutex.h", not <hurd/mutex.h>.
+	* object.h: Likewise.
+	* t-environment.h: Likewise.
+	* viengoos.c: Likewise.
+
 2008-01-17  Neal H. Walfield  <neal@gnu.org>
 
 	* object.c (folio_object_alloc): If a thread is waiting for an
